# cosmit-clip

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cosmic-clip-minimal.service  justfile
.agent/skills/rust-wayland-expert/: SKILL.md
.agent/skills/wayland-clipboard/: SKILL.md
.github/workflows/: ci.yml
assets/: wofi-style.css
src/: daemon.rs  main.rs  show.rs  state.rs
