[package]
name = "cosmic-clip-minimal"
version = "0.1.0"
edition = "2021"
description = "A minimal, event-driven Wayland clipboard history manager for Pop!_OS COSMIC"
license = "MIT"
repository = "https://github.com/adilsonoliveira37/cosmic-clip-minimal"
homepage = "https://github.com/adilsonoliveira37/cosmic-clip-minimal"
readme = "README.md"
keywords = ["clipboard", "wayland", "clipboard-manager", "cosmic", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]
authors = ["Adilson Oliveira <adilsonreisoliveira.98@gmail.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wayland-clipboard-listener = "0.6.0"
wl-clipboard-rs = "0.8.0"
